--- a/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/EditSprintTeam.xaml
+++ b/CSC3045-CS2-Frontend/CSC3045-CS2/Pages/EditSprintTeam.xaml
@@ -13,9 +13,14 @@
     <StackPanel Width="1100" Margin="0,75,0,0">
         <ContentControl Template="{StaticResource Headers}" Name="Header"/>
 
-        <TextBlock Name="ProjectNameTextBlock" HorizontalAlignment="Center" Style="{StaticResource Header}" Text="{Binding CurrentSprint.Project.Name}" Margin="0,0,0,15"/>
-
-        <TextBlock Name="SprintNameTextBlock" HorizontalAlignment="Center" Style="{StaticResource Header}"  Text="{Binding CurrentSprint.Name}" Margin="0,0,0,15"/>
+        <TextBlock Name="ProjectNameTextBlock" HorizontalAlignment="Center" Style="{StaticResource Header}" Margin="0,0,0,15">
+            <TextBlock.Text>
+                <MultiBinding StringFormat="{}{0} - {1}">
+                    <Binding Path="CurrentSprint.Project.Name"/>
+                    <Binding Path="CurrentSprint.Name"/>
+                </MultiBinding>
+            </TextBlock.Text>
+        </TextBlock>
         
         <Grid Height="600">
             <Grid.ColumnDefinitions>
@@ -157,9 +162,9 @@
             </ListBox>
 
             <Button Grid.Column="1" Grid.Row="2" Name="BackButton" Content="Back" 
-                    Style="{StaticResource StandardButton}" HorizontalAlignment="Right" Margin="0,10,15,0" Command="{Binding BackCommand}"/>
+                    Style="{StaticResource StandardButton}" HorizontalAlignment="Left" Margin="15,10,0,0" Command="{Binding BackCommand}"/>
             <Button Grid.Column="1" Grid.Row="2" Name="SaveButton" 
-                    Content="Save Team" Style="{StaticResource StandardButton}" HorizontalAlignment="Left" Margin="15,10,0,0" Command="{Binding SaveTeamCommand}"/>
+                    Content="Save Team" Style="{StaticResource StandardButton}" HorizontalAlignment="Right" Margin="0,10,15,0" Command="{Binding SaveTeamCommand}"/>
         </Grid>
     </StackPanel>
 </local:BasePage>
